<resources>
    <string name="app_name">TP1Martin</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="age">Age</string>
    <string name="domaine">Domaine</string>
    <string name="num">Numero</string>
    <string name="valider">Valider</string>
    <string name="alertDialog">Vous validez ces informations ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="retour">Retour</string>
    <string name="call">Appeler</string>
</resources>