<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Nom"
        android:layout_width="148dp"
        android:layout_height="43dp"
        android:hint="@string/nom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.939" app:layout_constraintVertical_bias="0.072"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/Prenom"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:hint="@string/prenom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.055" app:layout_constraintVertical_bias="0.073"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/Age"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:hint="@string/age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.169"/>
    <EditText
        android:id="@+id/Domaine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/domaine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.355"/>
    <EditText
        android:id="@+id/numero"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:hint="@string/num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.168" app:layout_constraintHorizontal_bias="0.94"/>


    <Button
        android:id="@+id/button_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="click"
        android:text="@string/valider" tools:ignore="MissingConstraints,OnClick"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501" app:layout_constraintVertical_bias="0.66"/>
</androidx.constraintlayout.widget.ConstraintLayout>